preserve whitespace and newlines for abstracts and notes (OPUSVIER-2565) Issue #OPUSVIER-2565 - Formatierungen (z.B. Absätze) im Abstract ermöglichen
git-svn-id: https://svn.zib.de/opus4dev/server/trunk@10694 0a49f362-4213-0410-86e3-e96cb6c4fbae

--- a/public/layouts/opus4/css/opus.css
+++ b/public/layouts/opus4/css/opus.css
@@ -1037,3 +1037,7 @@ dl.result_box {
     float: right;
     padding-right: 0;    
 }
+
+pre.preserve-spaces {
+    font-family: Arial, Helvetica, sans-serif;
+}
